ecmascript/parser/tests/typescript-errors/tsc/expressions/unaryOperators/incrementOperator/incrementOperatorWithAnyOtherTypeInvalidOperations/input.ts.stderr
error[2406]: Not a variable
  --> $DIR/tests/typescript-errors/tsc/expressions/unaryOperators/incrementOperator/incrementOperatorWithAnyOtherTypeInvalidOperations/input.ts:37:26
   |
37 | var ResultIsNumber11 = ++{};
   |                          ^^

error[2406]: Not a variable
  --> $DIR/tests/typescript-errors/tsc/expressions/unaryOperators/incrementOperator/incrementOperatorWithAnyOtherTypeInvalidOperations/input.ts:42:24
   |
42 | var ResultIsNumber15 = {}++;
   |                        ^^

error[2406]: Not a variable
  --> $DIR/tests/typescript-errors/tsc/expressions/unaryOperators/incrementOperator/incrementOperatorWithAnyOtherTypeInvalidOperations/input.ts:67:3
   |
67 | ++ANY1++;
   |   ^^^^^^

error[2406]: Not a variable
  --> $DIR/tests/typescript-errors/tsc/expressions/unaryOperators/incrementOperator/incrementOperatorWithAnyOtherTypeInvalidOperations/input.ts:68:3
   |
68 | ++ANY2++;
   |   ^^^^^^

error[2406]: Not a variable
  --> $DIR/tests/typescript-errors/tsc/expressions/unaryOperators/incrementOperator/incrementOperatorWithAnyOtherTypeInvalidOperations/input.ts:69:3
   |
69 | ++ANY2[0]++;
   |   ^^^^^^^^^

